<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/day0"

            android:layout_gravity="center"
            android:textSize="24sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sunny_1" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mostly_cloudy"
                tools:text=" Partly Cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                tools:text="24C-31C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:layout_gravity="center"

            android:textSize="24sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/rainy_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thunderstorms"
                tools:text=" Partly Cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                tools:text="24C-31C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/day1"
            android:textSize="24sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sunny_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partly_cloudy"
                tools:text=" Partly Cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:text="24C-31C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_gravity="center"

            android:text="@string/day3"
            android:textSize="24sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sunny_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunny"
                tools:text=" Partly Cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                tools:text="24C-31C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/day4"
            android:textSize="24sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sunny_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mostly_cloudy"
                tools:text=" Partly Cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                tools:text="24C-31C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/day5"
            android:textSize="24sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sunny_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partly_cloudy"
                tools:text=" Partly Cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                tools:text="24C-31C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/day6"
            android:textSize="24sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sunny_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunny"
                tools:text=" Partly Cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                tools:text="24C-31C" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
