<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame"
    tools:context=".WeatherFragment">

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row_height"
        android:layout_marginLeft="@dimen/row_height"
        android:layout_marginTop="@dimen/textview_weather_height"
        android:text="@string/temperature"
        android:textSize="@dimen/temperature_textSize" />

    <TextView
        android:id="@+id/textWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTemp"
        android:layout_marginStart="@dimen/row_height"
        android:layout_marginLeft="@dimen/row_height"
        android:text="@string/sunny"
        android:textSize="@dimen/temperature_textSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textTemp"
        android:layout_alignRight="@id/textTemp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/textview_weather_height"
        android:layout_marginEnd="@dimen/row_height"
        android:layout_marginRight="@dimen/row_height"
        android:text="@string/paris"
        android:textSize="@dimen/city_textSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWeather"
        android:layout_centerHorizontal="true"
        android:src="@drawable/images"
        tools:ignore="ContentDescription" />
</RelativeLayout>